<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Faralot Core</string>
    <string name="account_delete_progress">Account wird gelöscht!</string>
    <string name="add">Hinzufügen</string>
    <string name="add_favorite_success">Location wurde zu deinen Favoriten hinzugefügt</string>
    <string name="add_location">Location hinzufügen</string>
    <string name="add_manual">Manuelle Eingabe</string>
    <string name="add_opening">Öffnungszeit hinzufügen</string>
    <string name="add_visit_success">Der Besuch wurde registriert</string>
    <string name="address">Adresse</string>
    <string name="address_format">%1$s %2$s / %3$s %4$s</string>
    <string name="all_fields_required">Es müssen alle Felder ausgefüllt werden</string>
    <string name="app_cannot_start">App konnte nicht gestartet werden! Bitte starten Sie die App erneut.</string>
    <string name="app_info">App-Info</string>
    <string name="back">Zurück</string>
    <string name="category">Kategorie</string>
    <string name="category_value">Kategorie: %s</string>
    <string name="change_password">Passwort ändern</string>
    <string name="change_to_list">Zur Liste wechseln</string>
    <string name="change_to_map">Zur Karte wechseln</string>
    <string name="choose_new_position_format">Neue Position ausgewählt: %1$s:%2$s</string>
    <string name="comment_optional">Kommentar (optional)</string>
    <string name="coord_photo_exif">Koordinaten von Foto</string>
    <string name="coordinates_format">%1$s : %2$s</string>
    <string name="default_value">0</string>
    <string name="delete_account">Account löschen</string>
    <string name="delete_account_no_success">Konnte Account nicht löschen. Bitte versuchen Sie es später noch einmal.</string>
    <string name="delete_account_question">Willst du deinen Account\nwirklich löschen?</string>
    <string name="delete_favorite_success">Location wurde von deinen Favoriten gelöscht</string>
    <string name="description">Beschreibung</string>
    <string name="drawer_close">Geschlossen</string>
    <string name="drawer_open">Offen</string>
    <string name="duplicate_user">Nutzer ist schon vorhanden</string>
    <string name="edit">Editieren</string>
    <string name="edit_profile">Profil bearbeiten</string>
    <string name="email_address">Email-Adresse</string>
    <string name="error_message">Fehlermeldung</string>
    <string name="faralot">faralot</string>
    <string name="faralot_urls">www.faralot.de / www.faralot.com</string>
    <string name="favorite">Favorit</string>
    <string name="favorites">Favoriten</string>
    <string name="features">Merkmale</string>
    <string name="filter">Filter</string>
    <string name="filter_results">Ergebnisse filtern</string>
    <string name="find_coordinates">Koordinaten finden</string>
    <string name="firstname">Vorname</string>
    <string name="from">von</string>
    <string name="from_name">von %s</string>
    <string name="gps">GPS</string>
    <string name="gps_coordinates">GPS-Koordinaten</string>
    <string name="gps_enable_question">GPS ist nicht aktiv, wollen Sie es jetzt aktivieren?</string>
    <string name="here">Hier</string>
    <string name="info">Info</string>
    <string name="info_version_developer">Version: 1.0\nEntwickler: Sebastian Gottschlich</string>
    <string name="internet_disconnect">Keine Internetverbindung. Derzeit ist keine Offline-Unterstützung aktiviert.</string>
    <string name="lastname">Nachname</string>
    <string name="latitude">Latitude</string>
    <string name="lib_title_version">%1$s v%2$s</string>
    <string name="libraries">Verwendete Bibliotheken</string>
    <string name="localize">Lokalisierung</string>
    <string name="location_details">Location Details</string>
    <string name="log_in">Einloggen</string>
    <string name="log_out">Ausloggen</string>
    <string name="login_incorrect">Login ist falsch</string>
    <string name="longitude">Longitude</string>
    <string name="map">Karte</string>
    <string name="my_favorites">Meine Favoriten</string>
    <string name="my_points">Meine Punkte</string>
    <string name="my_position">Meine Position</string>
    <string name="my_profile">Mein Profil</string>
    <string name="my_visits">Meine Besuche</string>
    <string name="name">Name</string>
    <string name="new_position">Neuer Standort: %s</string>
    <string name="no">Nein</string>
    <string name="no_comment">- Kein Kommentar -</string>
    <string name="no_features_found">Keine Merkmale gefunden.</string>
    <string name="no_location_found_please_click">Keine Locations in ihrer Umgebung gefunden.</string>
    <string name="no_openings_found">Keine Öffnungszeiten gefunden.</string>
    <string name="no_pictures">Keine Bilder vorhanden</string>
    <string name="no_results_found">Keine Resultate gefunden</string>
    <string name="no_valid_coords">Keine validen Koordinaten verfügbar</string>
    <string name="not_empty_email">Email ist nicht ausgefüllt</string>
    <string name="not_empty_message">Nachricht darf nicht leer sein.</string>
    <string name="not_empty_password">Passwort muss ausgefüllt werden</string>
    <string name="not_empty_username">Benutzername muss ausgefüllt werden</string>
    <string name="not_equal_password">Passwort ist nicht gleich</string>
    <string name="opening">Öffnungszeit</string>
    <string name="openings">Öffnungszeiten</string>
    <string name="overview">Übersicht</string>
    <string name="pals_not_found_please">Fehlende App: Bitte laden Sie sich die PALS-App herunter</string>
    <string name="pals_provider">PALS - LocationSystem</string>
    <string name="password">Passwort</string>
    <string name="password_not_equal">Passwörter nicht gleich.</string>
    <string name="password_repeat">Passwort wiederholen</string>
    <string name="picture">Bild</string>
    <string name="pictures">Bilder</string>
    <string name="question_register">Noch nicht registriert?</string>
    <string name="radius">Radius</string>
    <string name="rating">Bewertung</string>
    <string name="ratings">Bewertungen</string>
    <string name="realname">%1$s %2$s</string>
    <string name="register">Registrieren</string>
    <string name="register_error">Sie konnten nicht registriert werden</string>
    <string name="register_info">Registrieren Sie sich jetzt!</string>
    <string name="register_info_sub">Sie können als Nutzer auf alle Funktionen zugreifen.</string>
    <string name="register_success">Sie wurden erfolgreich registriert</string>
    <string name="registered_since">Registriert seit %s</string>
    <string name="remove_coordinates">Koordinaten verwerfen</string>
    <string name="report_error">Fehler melden</string>
    <string name="report_location">Eintrag melden</string>
    <string name="report_question">Was wollen Sie melden?</string>
    <string name="report_success">Die Location wurde erfolgreich gemeldet. Danke!</string>
    <string name="results_found">%d Treffer gefunden</string>
    <string name="save">Speichern</string>
    <string name="search">Suchen</string>
    <string name="search_position">Standort wird ermittelt.</string>
    <string name="send">Senden</string>
    <string name="settings">Einstellungen</string>
    <string name="suitable">Geeignet</string>
    <string name="suitable_age">Geeignetes Alter</string>
    <string name="suitable_for">Geeignet für</string>
    <string name="suitable_from_to">Geeignet für %1$d bis %2$d Jahre</string>
    <string name="timescope">Zeitraum</string>
    <string name="to">bis</string>
    <string name="to_location">Zur Location</string>
    <string name="token_refresh_success">Token wurde erfolgreich aktualisiert</string>
    <string name="two_line_holder">.\n.</string>
    <string name="upload">Hochladen</string>
    <string name="upload_at">Hochgeladen am %s</string>
    <string name="username">Benutzername</string>
    <string name="value_km">%d km</string>
    <string name="visited">Besuchen</string>
    <string name="weekday">Wochentag</string>
    <string name="x_visits">%s x besucht</string>
    <string name="yes">Ja</string>
    <string name="info_developer">Entwickler: Sebastian Gottschlich</string>
    <string name="based_faralot">basierend auf dem faralot-core</string>
    <string name="stroke">--</string>
    <string name="only_my_pictures">Sie können nur Ihre eigenen Fotos löschen.</string>
    <string name="confirm">Bestätigen</string>
    <string name="prices">Eintrittspreise</string>
    <string name="agegroup_year">%1$d - %2$d Jahre</string>
    <string name="agegroup">Altersgruppe</string>
    <string name="price">Preis in €</string>
    <string name="add_prices">Eintrittspreis hinzufügen</string>
    <string name="preference_choose_ls">Wählen Sie eine Lokalisierung aus.\\nPALS wird empfohlen. www.faralot.de</string>
    <string name="preference_refresh_token">Bei Verdacht auf Fremdnutzung, Token erneuern.</string>
    <string name="refresh_token">Token erneuern</string>
    <string name="app_name_version">%1$s v%2$s</string>
    <string name="review_sub">von %1$s / %2$s</string>
    <string-array name="localization_systems">
        <item>GPS</item>
        <item>PALS</item>
    </string-array>
    <plurals name="review_count">
        <item quantity="zero">Keine Bewertung</item>
        <item quantity="one">%d Bewertung</item>
        <item quantity="other">%d Bewertungen</item>
    </plurals>
    <plurals name="point_count">
        <item quantity="zero">Keine Punkte</item>
        <item quantity="one">%d Punkt</item>
        <item quantity="other">%d Punkte</item>
    </plurals>
    <plurals name="visits_count">
        <item quantity="zero">Keine Besuche</item>
        <item quantity="one">%d Besuch</item>
        <item quantity="other">%d Besuche</item>
    </plurals>
    <plurals name="opening_count">
        <item quantity="one">%d Öffnungszeit</item>
        <item quantity="other">%d Öffnungszeiten</item>
    </plurals>

</resources>
