<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity"
  >
  <item
    android:id="@+id/action_search"
    android:icon="@drawable/ic_search"
    android:orderInCategory="100"
    android:title="@string/search"
    app:showAsAction="ifRoom"
    />
  <item
    android:id="@+id/action_change_to_list"
    android:icon="@drawable/ic_list"
    android:orderInCategory="200"
    android:title="@string/change_to_list"
    app:showAsAction="ifRoom"
    />

  <item
    android:id="@+id/action_filter"
    android:icon="@drawable/ic_filter"
    android:orderInCategory="300"
    android:title="@string/filter"
    app:showAsAction="ifRoom"
    />
  <item
    android:id="@+id/action_add_location"
    android:icon="@drawable/ic_plus_dark"
    android:orderInCategory="300"
    android:title="@string/add"
    app:showAsAction="ifRoom"
    />

</menu>