<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingEnd="10dp"
  android:paddingStart="10dp"
  >

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:layout_gravity="center_horizontal"
    android:contentDescription="@string/picture"
    android:paddingTop="10dp"
    android:scaleType="centerInside"
    android:src="@drawable/app_logo"
    />

  <TextView
    android:id="@+id/app_and_version"
    style="@style/h1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    />

  <TextView
    android:id="@+id/based_faralot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/based_faralot"
    />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/info_developer"
    android:textStyle="bold"
    />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/faralot_urls"
    />

  <TextView
    style="@style/h3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center_horizontal"
    android:text="@string/libraries"
    android:textColor="@color/app_accent"
    android:textSize="16sp"
    />

  <ListView
    android:id="@+id/listview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    />

</LinearLayout>
