<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/root"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_margin="10dp"
  >

  <TextView
    style="@style/h3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/radius"
    />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <SeekBar
      android:id="@+id/radius"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      />

    <TextView
      android:id="@+id/radius_text"
      android:layout_width="50dp"
      android:layout_height="wrap_content"
      android:textStyle="bold"
      />

  </LinearLayout>

  <TextView
    style="@style/h3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="@string/features"
    />

  <com.faralot.core.lib.MultiSpinner
    android:id="@+id/features"
    style="@style/spinner"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    />

  <com.dd.processbutton.iml.ActionProcessButton
    android:id="@+id/filter"
    style="@style/action_process_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/filter_results"
    app:pb_colorComplete="@color/button_process_complete"
    app:pb_colorError="@color/button_process_error"
    app:pb_colorNormal="@color/button_process"
    app:pb_colorPressed="@color/button_process_pressed"
    app:pb_colorProgress="@color/button_process_progress"
    />

</LinearLayout>